--- a/main.html
+++ b/main.html
@@ -7,76 +7,61 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Main table row -->
-      <tr>
-        <!-- First column: Nested Table 1 -->
-        <td>
-          <table border="1" style="width: 100%">
-            <tr>
-              <th>Nested Table 1</th>
-            </tr>
-            <tr>
-              <td>
-                <ul>
-                  <li>List item 1</li>
-                  <li>List item 2</li>
-                  <li>List item 3</li>
-                </ul>
-              </td>
-            </tr>
-          </table>
-        </td>
-
-        <!-- Second column: Nested Table 2 -->
-        <td>
-          <table border="1" style="width: 100%">
-            <tr>
-              <th colspan="2">Nested Table 2</th>
-            </tr>
-            <tr>
-              <th>Column 1</th>
-              <th>Column 2</th>
-            </tr>
-            <tr>
-              <td>abc</td>
-              <td>def</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-
-      <!-- Second main table row -->
-      <tr>
-        <!-- Third column: Nested Table 3 -->
-        <td>
-          <table border="1" style="width: 100%">
-            <tr>
-              <th colspan="2">Nested Table 3</th>
-            </tr>
-            <tr>
-              <td>
-                <a href="#">Nested Table</a>
-              </td>
-              <td>
-                Demo Continued
-              </td>
-            </tr>
-          </table>
-        </td>
-
-        <!-- Fourth column: Nested Table 4 with black background cell -->
-        <td>
-          <table border="1" style="width: 100%">
-            <tr>
-              <th colspan="2">Nested Table 4</th>
-            </tr>
-            <tr>
-              <td style="background-color:black; color:white">HTML</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
+    <table border="1" style="width: 100%; height: 100%">
+      <!-- Your code here -->
+		<tr>
+			<td>
+				<!--nested table 2 -->
+				<table border="1" style="width: 100%; height: 100%">
+					<tr>
+						<th colspan="2">Nested Table 2</th>
+					</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 2</th>
+					</tr>
+					<tr>
+						<th>abc</th>
+						<th>def</th>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<!--nested table 1-->
+				<table border="1" style="width: 100%; height: 100%">
+					<tr><th>Nested Table 1</th></tr>
+					<tr><td>
+						 <ul>
+							<li> List item</li>
+							<li> List item</li>
+							<li> List item</li>
+							 </ul>
+						</td></tr>
+				</table>
+			</td>
+		</tr>
+					<!-- nested loop 3 -->
+		 <td> 
+			<table border="1" style="width:100%; height:100%">
+				<tr><th colspan="2">Nested loop 3</th></tr>
+				<tr>
+					<td>
+						<a href="#">Nested Table</a>
+					</td>
+					<td>
+						Demo Continued
+					</td>
+				</tr>
+			</table>
+		</td>
+		<td>
+					<!-- nested loop 4 -->
+			<table border="1" style="width: 100%; height:">
+				<tr><th>Nested Table 4</th></tr>
+				<tr><td style="background-color:black; color:white">HTML</td></tr>
+			</table>
+		</td>
+		
     </table>
   </body>
 </html>
