--- a/main.html
+++ b/main.html
@@ -8,60 +8,61 @@
   </head>
   <body>
     <table border="1" style="width: 100%; height: 100%">
-      <!-- Your code here -->
-		<tr>
-			<td>
-				<!--nested table 2 -->
-				<table border="1" style="width: 100%; height: 100%">
-					<tr>
-						<th colspan="2">Nested Table 2</th>
-					</tr>
-					<tr>
-						<th>Column 1</th>
-						<th>Column 2</th>
-					</tr>
-					<tr>
-						<th>abc</th>
-						<th>def</th>
-					</tr>
-				</table>
-			</td>
-			<td>
-				<!--nested table 1-->
-				<table border="1" style="width: 100%; height: 100%">
-					<tr><th>Nested Table 1</th></tr>
-					<tr><td>
-						 <ul>
-							<li> List item</li>
-							<li> List item</li>
-							<li> List item</li>
-							 </ul>
-						</td></tr>
-				</table>
-			</td>
-		</tr>
-					<!-- nested loop 3 -->
-		 <td> 
-			<table border="1" style="width:100%; height:100%">
-				<tr><th colspan="2">Nested loop 3</th></tr>
-				<tr>
-					<td>
-						<a href="#">Nested Table</a>
-					</td>
-					<td>
-						Demo Continued
-					</td>
-				</tr>
-			</table>
-		</td>
-		<td>
-					<!-- nested loop 4 -->
-			<table border="1" style="width: 100%; height:">
-				<tr><th>Nested Table 4</th></tr>
-				<tr><td style="background-color:black; color:white">HTML</td></tr>
-			</table>
-		</td>
-		
+      <!-- First row with two nested tables -->
+      <tr>
+        <td>
+          <!-- Nested Table 2 -->
+          <table border="1" style="width: 100%; height: 100%">
+            <tr>
+              <th colspan="2">Nested Table 2</th>
+            </tr>
+            <tr>
+              <th>Column 1</th>
+              <th>Column 2</th>
+            </tr>
+            <tr>
+              <td>abc</td>
+              <td>def</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <!-- Nested Table 1 -->
+          <table border="1" style="width: 100%; height: 100%">
+            <tr><th>Nested Table 1</th></tr>
+            <tr>
+              <td>
+                <ul>
+                  <li>List item 1</li>
+                  <li>List item 2</li>
+                  <li>List item 3</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+
+      <!-- Second row with two nested tables -->
+      <tr>
+        <td>
+          <!-- Nested Table 3 -->
+          <table border="1" style="width: 100%; height: 100%">
+            <tr><th colspan="2">Nested Table 3</th></tr>
+            <tr>
+              <td><a href="#">Nested Table</a></td>
+              <td>Demo Continued</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <!-- Nested Table 4 with black background -->
+          <table border="1" style="width: 100%; height: 100%">
+            <tr><th>Nested Table 4</th></tr>
+            <tr><td style="background-color:black; color:white">HTML</td></tr>
+          </table>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
